# luma

./: .env.example  .gitignore  Dockerfile  FEATURES.md  README.md  docker-compose.yml  dokploy-compose.yml  main.py  pyproject.toml
app/: bot.py  channels.py  config.py  database.py  logging_config.py
app/cogs/: blitz.py  culture.py  help.py  journals.py  members.py  monitoring.py  phases.py  ping.py  projects.py  reviews.py  standup.py  stuck.py  tickets.py  tracks.py  xp.py
app/data/: command_help.py
app/embeds/: badge_embed.py  blitz_embed.py  github_embed.py  help_embed.py  journal_embed.py  leaderboard_embed.py  phase_embed.py  project_embed.py  standup_embed.py  ticket_embed.py  track_embed.py
app/migrations/: 001_bot_tables.sql  002_seed.sql  003_badges_seed.sql  004_pr_reviewers_map.sql  005_bot_tickets_id_text.sql  006_bot_sprints.sql  007_companion_layer.sql  008_companion_sql_function.sql  009_tech_blitz.sql  010_enrollments_and_notifications.sql  011_feature_opt_in_grandfather.sql  seed_companion_tracks.py
app/models/: badge.py  blitz.py  enrollment.py  help_thread.py  journal.py  member.py  notification_preference.py  phase.py  project.py  standup.py  ticket.py  track.py  xp.py
app/scheduler/: jobs.py
app/services/: badge_service.py  blitz_service.py  enrollment_service.py  github_service.py  journal_service.py  member_service.py  notification_service.py  phase_service.py  project_service.py  standup_service.py  steak_service.py  stuck_service.py  ticket_service.py  track_service.py  xp_service.py
app/tests/: test_badge_service.py  (+11 more)
(+6 files in other folders)
