[project]
name = "luma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "discord>=2.3.2",
    "fastapi[all]>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.38",
    "structlog>=25.5.0",
    "supabase>=2.29.0",
]
